--- a/ascii_sonification.html
+++ b/ascii_sonification.html
@@ -13,15 +13,13 @@
 <script type="text/javascript" src='testing for p5.js'> </script>
 
 <button type="button" >Play</button>
-<input type="text" value="Enter memory here...">
-<!--<button onclick "getText()" type="button" >Enter</button>-->
-
-</head>
+<input type="text" id="myText" value="Enter text...">
+<a href="#" onclick="setText()" /> Submit </a> </br>
 
 <body>
 
 <script>
-var sound = sonify("DMSP Preservation")
+sonify("DMSP Preservations");
 </script>
 
 </body>
