--- a/ui/start.html
+++ b/ui/start.html
@@ -9,26 +9,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <!-- animate -->
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="C:\Users\alist\OneDrive\Documents\DMSP\preservation\preservation/css/style.css">
 <body id="body3">
   <div>
 	<div class="left_bar3">
-	  <img src="../img/button/heading2.png" style="height: 600px; margin-top: 100px; margin-left: 20px;" alt="" />
+	  <img src="C:\Users\alist\OneDrive\Documents\DMSP\preservation\preservation/img/button/heading2.png" style="height: 600px; margin-top: 100px; margin-left: 20px;" alt="" />
 	 </div>
 	  <div class="middle_4">
-		  <img src="../img/button/pink_square.png" style="height: 250px; margin-top: 130px;" alt="">
-		  <img src="../img/button/pink_square.png" style="height: 250px; margin-top: 130px; float: right;" alt="">
-		  <img src="../img/button/pink_square.png" style="height: 250px; margin-top: 30px;" alt="">
-		  <img src="../img/button/pink_square.png" style="height: 250px; margin-top: 30px; float: right;" alt="">
+		  <img src="C:\Users\alist\OneDrive\Documents\DMSP\preservation\preservation/img/button/pink_square.png" style="height: 250px; margin-top: 130px;" alt="">
+		  <img src="C:\Users\alist\OneDrive\Documents\DMSP\preservation\preservation/img/button/pink_square.png" style="height: 250px; margin-top: 130px; float: right;" alt="">
+		  <img src="C:\Users\alist\OneDrive\Documents\DMSP\preservation\preservation/img/button/pink_square.png" style="height: 250px; margin-top: 30px;" alt="">
+		  <img src="C:\Users\alist\OneDrive\Documents\DMSP\preservation\preservation/img/button/pink_square.png" style="height: 250px; margin-top: 30px; float: right;" alt="">
 	  </div>
 	 <div class="right_bar4">
-	  <button class="button4" type="button"><a href="category.html"> <img src="../img/button/close.png" style="width: 50px; background-color: transparent; margin-top: 50px; margin-left: 180px;" alt="" /></a>
+	  <button class="button4" type="button"><a href="category.html"> <img src="C:\Users\alist\OneDrive\Documents\DMSP\preservation\preservation/img/button/close.png" style="width: 50px; background-color: transparent; margin-top: 50px; margin-left: 180px;" alt="" /></a>
 	  </button>
-		<button class="button4" type="button"><a href="choice.html"> <img src="../img/button/blue_button_next.png" style="width: 250px; height: 100px; background-color: transparent; margin-top: 150px;" alt="" /></a>
+		<button class="button4" type="button"><a href="choice.html"> <img src="C:\Users\alist\OneDrive\Documents\DMSP\preservation\preservation/img/button/blue_button_next.png" style="width: 250px; height: 100px; background-color: transparent; margin-top: 150px;" alt="" /></a>
 	  </button>
 	 </div>
   </div>
-</body> 
+</body>
 
 
 </html>
