--- a/category.html
+++ b/category.html
@@ -23,7 +23,7 @@
 		 <button class="button2_childhood" type="button"><a href="lal.html"> <img src="img/button/other.png" style="height:80px; background-color: transparent;   margin-top: 50px;" alt="" /></a></button>
 	 </div>
 	 <div class="disc_2">
-		 <img src="img/cd/other CD.png" style="width: 300px; background-color: transparent;" alt="" /> 
+		 <img src="img/cd/other CD.png" style="width: 300px; background-color: transparent;" alt="" />
 		 <img src="img/cd/other CD.png" style="width: 300px; background-color: transparent;" alt="" />
 		 <img src="img/cd/other CD.png" style="width: 300px; background-color: transparent;" alt="" />
 		 <img src="img/cd/other CD.png" style="width: 300px; background-color: transparent;" alt="" />
@@ -35,10 +35,9 @@
 	 </div>
   </div>
 	<div class="f-nav">
-		<button class="button2_booth" type="button"><a href="memory.html"><img src="img/button/heading3.png" style="height: 90px; align-content: center; background-color: transparent;" alt="" /></a></button>
+		<button class="button2_booth" type="button"><a href="memory.php"><img src="img/button/heading3.png" style="height: 90px; align-content: center; background-color: transparent;" alt="" /></a></button>
 	</div>
-	
-</body>
-	
-</html>
 
+</body>
+
+</html>
