--- a/start.html
+++ b/start.html
@@ -1,8 +1,11 @@
 ﻿<!doctype html>
 <html>
 <head>
-<meta charset="UTF-8">
-<title>4</title>
+  <meta charset="UTF-8">
+  <title>4</title>
+  <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+  <script src="https://unpkg.com/tone"></script>
+  <script type="text/javascript" src='javascript/ascii_sonification.js'> </script>
 </head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
