Basic structure working

--- a/category.html
+++ b/category.html
@@ -35,7 +35,7 @@
 	 </div>
   </div>
 	<div class="f-nav">
-		<button class="button2_booth" type="button"><a href="memory.html"><img src="img/button/heading3.png" style="height: 90px; align-content: center; background-color: transparent;" alt="" /></a></button>
+		<button class="button2_booth" type="button"><a href="memory.php"><img src="img/button/heading3.png" style="height: 90px; align-content: center; background-color: transparent;" alt="" /></a></button>
 	</div>
 
 </body>
