--- a/memory.html
+++ b/memory.html
@@ -21,15 +21,15 @@
 
 				<br><br>
 
-          <form action="https://playground.eca.ed.ac.uk/~s1409071/php_testing.php" method="get">
+          <form action="start.php" method="get">
             <div class="input_bar3_name">
-                  Name: <input type="text" name="name" class="form-control3_name" id="3_name" placeholder="Name">
+                  Name: <input type="text" name="name" class="form-control3_name" id="name" placeholder="Name">
             </div>
             <div class="input_bar3_category">
-                  Category: <input type="text" name="category" class="form-control3_category" id="3_category" placeholder="Category">
+                  Category: <input type="text" name="category" class="form-control3_category" id="category" placeholder="Category">
 				    </div><br>
             <div class="input_bar3_content">
-                  Memory:	<input type="text" name="memory" class="form-control3_2" id="write_down_content" placeholder="Enter memory here..."><br>
+                  Memory:	<input type="text" name="memory" class="form-control3_2" id="memory" placeholder="Enter memory here..."><br>
             </div>
             <div class="button3_start">
               <button class="button3" type="submit">
