--- a/lal.html
+++ b/lal.html
@@ -14,7 +14,7 @@
   <div>
 	  <div class="delete_logo_404">
 		 <button class="button5" type="button"><a href="category.html"> <img src="img/button/close.png" style="width: 30px; background-color: transparent; float: right;" alt="" /></a>
-	         </button> 
+	         </button>
 	  </div>
 	 <div class="content_404">
 			 <div class="box404">
@@ -22,7 +22,7 @@
 	         </button>
 		   </div><br><br>
 			<div class="box404">
-		     <button class="button5" type="button"><a href="category.html"> <img src="img/button/2.png" style="width: 350px; background-color: transparent; margin-left: 50px;" alt="" /></a>
+		     <button class="button5" type="button"><a href="memory.php"> <img src="img/button/2.png" style="width: 350px; background-color: transparent; margin-left: 50px;" alt="" /></a>
 	         </button>
 		   </div><br><br>
 		 		   <div class="box404">
