--- a/preservation/ui/content_student.html
+++ b/preservation/ui/content_student.html
@@ -14,42 +14,44 @@
 <link href="https://fonts.googleapis.com/css2?family=Orbitron" rel="stylesheet">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
 
-
+<!--change test123-->
 
 <body>
     <div class="main">
         <div class="row">
             <div class="col-sm-12">
-                <h1 style="margin-bottom:20px"> Childhood </h1>
+                <h1 style="margin-bottom:20px">Childhood </h1>
             </div>
             <div class="col-sm-8" style="max-height:80vh; overflow-y: auto; overflow-x: hidden;">
-                <button class="button-memory" id="1">
-                    <h2 class="title"><span>#01 Bob </span>
+                <button class="button-memory" id="memory1" onclick="changeparagraph()">
+                    <h2 class="title"><span id="id">#01</span>
+                        <span id="name">Bob </span>
                         Memory with grandma...
                     </h2>
                 </button>
-                <button class="button-memory" id="2" onclick="changeparagraph()">
-                    <h2 class="title"><span>#01 Bob </span>
+                <button class="button-memory" id="memory1" onclick="changeparagraph()">
+                    <h2 class="title"><span id="id">#01</span>
+                        <span id="name">Bob </span>
                         Memory with grandma...
                     </h2>
-                </button>
-                <button class="button-memory" id="3">
-                    <h2 class="title"><span>#01 Bob </span>
+                </button> <button class="button-memory" id="memory1" onclick="changeparagraph()">
+                    <h2 class="title"><span id="id">#01</span>
+                        <span id="name">Bob </span>
                         Memory with grandma...
                     </h2>
-                </button>
-                <button class="button-memory" id="4">
-                    <h2 class="title"><span>#01 Bob </span>
+                </button> <button class="button-memory" id="memory1" onclick="changeparagraph()">
+                    <h2 class="title"><span id="id">#01</span>
+                        <span id="name">Bob </span>
                         Memory with grandma...
                     </h2>
-                </button>
-                <button class="button-memory" id="5">
-                    <h2 class="title"><span>#01 Bob </span>
+                </button> <button class="button-memory" id="memory1" onclick="changeparagraph()">
+                    <h2 class="title"><span id="id">#01</span>
+                        <span id="name">Bob </span>
                         Memory with grandma...
                     </h2>
-                </button>
-                <button class="button-memory" id="1">
-                    <h2 class="title"><span>#01 Bob </span>
+                </button> <button class="button-memory" id="memory1" onclick="changeparagraph()">
+                    <h2 class="title"><span id="id">#01</span>
+                        <span id="name">Bob </span>
                         Memory with grandma...
                     </h2>
                 </button>
