working on tone p5 stuff

--- a/ui/category.html
+++ b/ui/category.html
@@ -84,7 +84,7 @@
 				aria-labelledby="nav-childhood-tab">
 				<div class="row">
 					<div class="col-12 align-self-center">
-						
+
 						<img src="../img/cd/childhood CD.png" style="width: 300px; background-color: transparent;"
 							alt="" />
 						<img src="../img/cd/childhood CD.png" style="width: 300px; background-color: transparent;"
@@ -168,10 +168,10 @@
 
 
 	<div class="f-nav">
-		<a href="memory.html">
+		<a href="recordMemory.html">
 			<div class="center" style="width:500px">
 				<div class="col-12 align-self-center" style="margin:50px 0 0 0">
-					<a href="memory.html" style=" text-decoration: none;">
+					<a href="recordMemory.html" style=" text-decoration: none;">
 						<div class="svg-wrapper-light cyan" style="width:100%; border: solid 5px var(--ccyan);">
 							<div class="button-text-light" style="top:5px; color:var(--ccyan)">Add My
 								Meomories</div>
