--- a/ui/category_old.html
+++ b/ui/category_old.html
@@ -68,7 +68,7 @@
 	</div>
 	<div class="f-nav">
 		<button class="button2_booth" type="button">
-			<a href="memory.html">
+			<a href="recordMemory.html">
 				<div class="center">
 					<img src="../img/button/heading3.png" style="height: 90px; background-color: transparent;" alt="" />
 				</div>
