Sound and visuals working!

--- a/ui/start.html
+++ b/ui/start.html
@@ -38,7 +38,8 @@
 	</div>
 
 <script>
-setInputText("DMSP Preservation")
+setInputText("DMSP Preservation");
+play();
 //sound_and_visuals();
 </script>
 
