--- a/preservation/ui/introduction.html
+++ b/preservation/ui/introduction.html
@@ -16,9 +16,9 @@
     </div>
 
     <div class="content">
-        <button id="pauseBtn" class="controlBtn" onclick="Pause()">Pause</button>
+        <button id="pauseBtn" class="btn-control" onclick="Pause()">Pause</button>
         <a href="category.html">
-            <button id="skipBtn" class="controlBtn" onclick="Skip()">Skip</button>
+            <button id="skipBtn" class="btn-control" onclick="Skip()">Skip</button>
         </a>
     </div>
 
