body id changed

--- a/preservation/ui/recordMemory.html
+++ b/preservation/ui/recordMemory.html
@@ -87,7 +87,7 @@ function create_elements()
 ?>
 
 
-<body id="record-memory">
+<body id="body-general">
 	<div class="container center-form">
 		<div class="row mx-auto text-center">
 			<div class="col-md-12 col-sm-6 my-auto">
