--- a/preservation/ui/choice.html
+++ b/preservation/ui/choice.html
@@ -12,7 +12,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Orbitron" rel="stylesheet">
 <link rel="stylesheet" href="../css/style.css">
 
-<body id="record-memory">
+<body id="body-general">
 	<div>
 		<div class="left_bar3">
 			<img src="../img/button/heading2.png" style="height: 600px; margin-top: 100px; margin-left: 20px;" alt="" />
