Developed random colours etc

--- a/ui/start.html
+++ b/ui/start.html
@@ -38,8 +38,9 @@
 	</div>
 
 <script>
-setInputText("DMSP Preservation");
+setInputText("DMSP Preseration sdglakjdsrgnakrSrhzdrjzdtjz");
 play();
+setRandomColours("pink");
 </script>
 
 
