--- a/ui/start.html
+++ b/ui/start.html
@@ -17,7 +17,7 @@
 <script src="https://unpkg.com/tone"></script>
 <!--<script type = "text/javascript" src = "../javascript/ascii_sonification.js"></script>
 <script type = "text/javascript" src = "../javascript/visuals.js"></script>-->
-<script type = "text/javascript" src = "../javascript/sound_and_vision.js"></script>
+<script type = "text/javascript" src = "../js/sound_and_vision.js"></script>
 
 <link href="https://fonts.googleapis.com/css2?family=Orbitron" rel="stylesheet">
 <link rel="stylesheet" href="../css/style.css">
