--- a/ui/start.html
+++ b/ui/start.html
@@ -21,6 +21,7 @@
 
 <link href="https://fonts.googleapis.com/css2?family=Orbitron" rel="stylesheet">
 <link rel="stylesheet" href="../css/style.css">
+<link rel="stylesheet" href="../css/style_old.css">
 
 <body id="body3">
 
