change name from start to your_memory

--- a/ui/recordMemory.html
+++ b/ui/recordMemory.html
@@ -24,7 +24,7 @@
 				<img src="../img/heading/heading2.png" style="height: 120px; background-color: transparent;" alt="" />
 
 
-				<form action = "start.php" onsubmit="return checkForm()" method="post" class="justify-content-center radio-form">
+				<form action = "your_memory.php" onsubmit="return checkForm()" method="post" class="justify-content-center radio-form">
 
 					<div class="form-group">
 						<input class="form-control memory-name" type="text" name="name" id="name" placeholder="Name" />
