--- a/ui/category.html
+++ b/ui/category.html
@@ -168,7 +168,7 @@
 
 
 	<div class="f-nav">
-		<a href="recordMemory.html">
+		<a href="record_memory.html">
 			<div class="center" style="width:500px">
 				<div class="col-12 align-self-center" style="margin:50px 0 0 0">
 					<a href="recordMemory.html" style=" text-decoration: none;">
