add img, link choice pages

--- a/menu.html
+++ b/menu.html
@@ -14,9 +14,13 @@
 
 <body class="body-common">
 
+	<div class="nav">
+		<a href="memory_list.html">
+			<img class="nav" src="img/button/close.png" style="width: 30px;" alt="" />
+		</a>
+	</div>
 
 	<div class="flex-center">
-
 		<a href="menu.html">
 			<img src="img/heading/heading.png" style="width: 500px" />
 		</a>
@@ -41,7 +45,7 @@
 				</div>
 			</a>
 
-			<a href="readMe.html">
+			<a href="read_me.html">
 				<div class="svg-wrapper-light" style="width:350px; margin: 50px 0;">
 					<svg style=" height:60px; width: 350px;" xmlns="http://www.w3.org/2000/svg">
 						<rect class="shape-light" style="height:60px; width:350px;stroke-dasharray: 380 20 390 20;"
@@ -51,7 +55,7 @@
 				</div>
 			</a>
 
-			<a href="aboutUs.html">
+			<a href="about_us.html">
 				<div class="svg-wrapper-light" style="width:350px; margin: 50px 0;">
 					<svg style=" height:60px; width: 350px;" xmlns="http://www.w3.org/2000/svg">
 						<rect class="shape-light" style="height:60px; width:350px;stroke-dasharray: 380 20 390 20;"
