--- a/record_memory.html
+++ b/record_memory.html
@@ -87,11 +87,11 @@ function create_elements()
 ?>
 
 
-<body id="body-general">
+<body class="body-common">
 	<div class="container center-form">
 		<div class="row mx-auto text-center">
 			<div class="col-md-12 col-sm-6 my-auto">
-				<img src="../img/heading/heading2.png" style="height: 120px; background-color: transparent;" alt="" />
+				<img src="../img/heading/heading.png" style="height: 120px; background-color: transparent;" alt="" />
 				<form action="" class="justify-content-center radio-form">
 					<div class="form-group">
 						<input class="form-control memory-name" type="text" name="name" id="name" placeholder="Name" />
