--- a/ui/index.html
+++ b/ui/index.html
@@ -15,7 +15,7 @@
 
 <body id="body">
 
-  <div class="center" style="top:7%">
+  <div class="center" style="top:380px">
     <img src="../img/heading/heading.png" style="width: 1000px" alt="title" />
 
 
@@ -29,7 +29,7 @@
 
 
     <a href="introduction.html">
-      <div class="svg-wrapper" style="margin-top: -200px;">
+      <div class="svg-wrapper">
         <svg height="60" width="320" xmlns="http://www.w3.org/2000/svg">
           <defs>
             <linearGradient id="gradient" x1="0%" y1="0%" x2="0%" y2="100%">
