--- a/ui/menu.html
+++ b/ui/menu.html
@@ -16,7 +16,7 @@
 
 	<div class="nav">
 		<a href="memory_list.html">
-			<img class="nav" src="img/button/close.png" style="width: 30px;" alt="" />
+			<img class="nav" src="../img/button/close.png" style="width: 30px;" alt="" />
 		</a>
 	</div>
 
@@ -26,7 +26,7 @@
 		</a>
 
 		<div class="menu-container">
-			<a href="memory_list.html">
+			<a href="memory_list.php">
 				<div class="svg-wrapper-light" style="width:350px; margin: 50px 0;">
 					<svg style=" height:60px; width: 350px;" xmlns="http://www.w3.org/2000/svg">
 						<rect class="shape-light" style="height:60px; width:350px;stroke-dasharray: 380 20 390 20;"
