--- a/ui/your_memory[for_testing].html
+++ b/ui/your_memory[for_testing].html
@@ -39,7 +39,7 @@
 <script>
 setInputText("DMSP Preseration sdglakjdsrgnakrSrhzdrjzdtjz");
 play();
-setRandomColours("pink");
+setRandomColoursByCategory("childhood");
 </script>
 
 
