--- a/ui/index.html
+++ b/ui/index.html
@@ -9,13 +9,12 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
-
 <link href="https://fonts.googleapis.com/css2?family=Orbitron" rel="stylesheet">
 <link rel="stylesheet" href="../css/style.css">
 
 <body id="body">
 
-  <div class="center" style="top:7%">
+  <div class="center" style="top:380px">
     <img src="../img/heading/heading.png" style="width: 1000px" alt="title" />
 
 
@@ -29,7 +28,7 @@
 
 
     <a href="introduction.html">
-      <div class="svg-wrapper" style="margin-top: -200px;">
+      <div class="svg-wrapper">
         <svg height="60" width="320" xmlns="http://www.w3.org/2000/svg">
           <defs>
             <linearGradient id="gradient" x1="0%" y1="0%" x2="0%" y2="100%">
