change spelling mistakes etc

--- a/ui/index.html
+++ b/ui/index.html
@@ -17,7 +17,7 @@
 
   <div class="center" style="top:7%">
     <img src="../img/heading/heading.png" style="width: 1000px" alt="title" />
-
+  <div>
 
     <!--
   <div>
