--- a/ui/menu.html
+++ b/ui/menu.html
@@ -32,7 +32,7 @@
 						<rect class="shape-light" style="height:60px; width:350px;stroke-dasharray: 380 20 390 20;"
 							stroke="#ffffff90" />
 					</svg>
-					<div class="button-text-light">Saved Memory</div>
+					<div class="button-text-light">Memory Archive</div>
 				</div>
 			</a>
 			<a href="record_memory.html">
@@ -41,7 +41,7 @@
 						<rect class="shape-light" style="height:60px; width:350px;stroke-dasharray: 380 20 390 20;"
 							stroke="#ffffff90" />
 					</svg>
-					<div class="button-text-light">My Dream</div>
+					<div class="button-text-light">Add My Memory</div>
 				</div>
 			</a>
 
