--- a/ui/introduction.html
+++ b/ui/introduction.html
@@ -17,7 +17,7 @@
 
     <div class="content">
         <button id="pauseBtn" class="btn-control" onclick="Pause()">Pause</button>
-        <a href="menu.html">
+        <a href="memory_list.php">
             <button id="skipBtn" class="btn-control" onclick="Skip()">Skip</button>
         </a>
     </div>
