--- a/ui/about_us.html
+++ b/ui/about_us.html
@@ -23,7 +23,7 @@
   <div>
     <div class="member-content-head">
       <P>
-        About Our website
+        About Our Website
       </p>
       <br>
     </div>
