--- a/ui/menu.html
+++ b/ui/menu.html
@@ -15,7 +15,7 @@
 <body class="body-common">
 
 	<div class="nav">
-		<a href="memory_list.html">
+		<a href="memory_list.php">
 			<img class="nav" src="../img/button/close.png" style="width: 30px;" alt="" />
 		</a>
 	</div>
