remove json from github plus other changes

--- a/ui/choice_childhood.html
+++ b/ui/choice_childhood.html
@@ -15,7 +15,7 @@
 
 <body id="body3">
     <div class="nav">
-        <a href="menu.html">
+        <a href="memory_list.php">
             <img class="nav" src="../img/button/close.png" style="width: 30px;" alt="" />
         </a>
     </div>
