--- a/ui/memory_list.html
+++ b/ui/memory_list.html
@@ -60,14 +60,14 @@
                         <div class="button-text-light">Student Life</div>
                     </div>
                 </a>
-                <!--sl = student life-->
+                
                 <a class="nav-item nav-link" id="nav-others-tab" data-toggle="tab" href="#nav-others" role="tab"
                     aria-controls="nav-others" aria-selected="false">
                     <div class="svg-wrapper-light cyan" style="width:200px;">
                         <svg style=" height:60px; width: 200px;" xmlns="http://www.w3.org/2000/svg">
                             <rect class="shape-light green" style="height:60px; width:200px;" stroke="#ffffff90" />
                         </svg>
-                        <div class="button-text-light">Others</div>
+                        <div class="button-text-light">Other</div>
                     </div>
                 </a>
             </div>
