final changes for today

--- a/ui/view_memory[for_testing].html
+++ b/ui/view_memory[for_testing].html
@@ -38,8 +38,9 @@
 			<div class="col-md-5">
 				<div id="sketch-holder">
 					<!-- Our sketch will go here! -->
+					<!--
 					<canvas id="defaultCanvas0" class="p5Canvas" width="300" height="300"
-						style="width:100%;height:100%;background-color: tomato;"></canvas>
+						style="width:100%;height:100%;background-color: tomato;"></canvas>-->
 				</div>
 			</div>
 			<div class="col-md-7 my-auto" style="text-align: left;">
