--- a/ui/read_me.html
+++ b/ui/read_me.html
@@ -12,25 +12,25 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css'>
-  <link rel="stylesheet" href="css/about_us.css">
+  <link rel="stylesheet" href="../css/about_us.css">
 
 </head>
 
 <body id="body3">
   <div class="nav">
     <a href="menu.html">
-      <img class="nav" src="img/button/narv.png" style="width: 50px; z-index: 999;" />
+      <img class="nav" src="../img/button/narv.png" style="width: 50px; z-index: 999;" />
     </a>
   </div>
 
   <div class="row align-items-center justify-content-center choice-container">
     <div class="col-md-12" style="text-align: center;">
       <h1 class="m-5">Read Me</h1>
-      <img src="img/gif/Preservation-Hallucination.gif" style="width:50%;" />
+      <img src="../img/gif/Preservation-Hallucination.gif" style="width:50%;" />
       <p class="m-5">Hello, my name is IAIn, I am an archive of memory. </p>
     </div>
     <div class="col-md-6">
-      <img src="img/bg/memory-booth.png" style="width:100%;" />
+      <img src="../img/bg/memory-booth.png" style="width:100%;" />
     </div>
     <div class="col-md-6 ">
       <p class="mx-5">Welcome to the memory booth. <br />Here you can explore your memories in my dream. </p>
@@ -40,11 +40,11 @@
         time. </p>
     </div>
     <div class="col-md-6">
-      <img src="img/bg/archive.png" style="width:100%" />
+      <img src="../img/bg/archive.png" style="width:100%" />
 
     </div>
   </div>
-  <!-- 
+  <!--
       <div class="read-me-headline">Read Me</div>
 
       <div>
