--- a/ui/choice.html
+++ b/ui/choice.html
@@ -25,22 +25,23 @@
 				<img src="../img/bg/modal1.png" class="frame" style="width: 800px;" />
 				<img src="../img/heading/heading.png" class="center" style="width: 600px;top:15%" alt="Memory Booth" />
 
-				<h1 class="center" style="top:40%">Save your memory?</h1>
-				<div class="button-container" style="padding:450px 0 0 0">
-					<a href="delete.html">
+				<h1 class="center" style="top:40%">Would you like me to preserve your memory?</h1>
+				<div class="button-container" style="padding:400px 0 0 0">
+					<a href="animation.html">
 						<div class="svg-wrapper-light choice-button-wide" style="border: solid 5px var(--cpurple);">
 							<div class="button-text-light" style="top:5px; color:white">
-								Don't Save</div>
+								YES</div>
 						</div>
 					</a>
 
-					<a href="record_memory.html">
-						<div class="svg-wrapper-light choice-button-narrow" style="border: solid 5px var(--cpurple);">
+					<a href="delete.html">
+						<div class="svg-wrapper-light cyan choice-button-wide" style="border: solid 5px var(--ccyan);">
 							<div class="button-text-light" style="top:5px; color:white">
-								Cancel</div>
+								NO</div>
 						</div>
 					</a>
 
+					<!--
 					<a href="choice_childhood.html">
 						<div class="svg-wrapper-light cyan choice-button-narrow"
 							style="border: solid 5px var(--ccyan);">
@@ -48,7 +49,7 @@
 								Save</div>
 						</div>
 					</a>
-				</div>
+				-->
 				<!--
 		<div class="right_bar3">
 			<div class="problem_5">
