change some text RE Carla's feedback

--- a/ui/about_us.html
+++ b/ui/about_us.html
@@ -30,12 +30,7 @@
 
     <div>
       <p class="member-content">
-        AI robot's rst-person perspective guided web browsing. Explore the digital archive preserve with computer
-        hullucination in metaphorical
-        term. The feeling becomes lost in digital archive world (in other people’s memory). AI’s digital mental
-        architecture (A theory base on mental
-        architecture, implies the existence of a split between conscious and unconscious behavior (imagine sometime AI
-        can be unconscious).
+        Our website is an archive of memory which imagines what it’s like inside the mental architecture of AI. You are drawn into the world from the perspective of the AI interface, IAIN. Exploring the digital archive, you may feel you become lost in this immersive world, populated with other people’s memories. But to become part of the archive and part of this mental architecture your memories first need to be translated from human language into code (AI language). This process generates sound and a unique moving graphic. The result is disjointed, dreamlike, and unfamiliar to us. Dreams are part of how we remember as humans. Imagine if, with the advent of AI, machines will not only be able to think for themselves but to have a subconscious and dream as they process, learn from, and remember the human world around them, you will begin to enter our world. 
       </p>
     </div>
     <br><br>
