--- a/ui/record_memory.html
+++ b/ui/record_memory.html
@@ -55,7 +55,7 @@
 						<div class="form-check form-check-inline">
 							<input class="form-check-input" type="radio" name="category" id="others"
 								value="others" checked="checked">
-							<label class="form-check-label" for="others">Others</label>
+							<label class="form-check-label" for="others">Other</label>
 
 						</div>
 					</div>
@@ -66,7 +66,7 @@
 
 					<div class="form-group">
 						<textarea class="form-control memory-content" name = "memory" id="memory" rows="5"
-							placeholder="Here is my memory..."></textarea>
+							placeholder="Write your memory here..."></textarea>
 						<span class="error">
 							<p id="memory_error"></p>
 						</span>
