--- a/ui/choice_childhood.html
+++ b/ui/choice_childhood.html
@@ -28,16 +28,22 @@
         <div class="gif-container center">
             <img src="../img/gif/save-gif/childhood.gif" style="width: 300px;" />
         </div>
+        <
         <div class="button-container">
+          <a href = "memory_list.php">
             <div class="svg-wrapper-light cyan choice-button" style="border: solid 5px var(--ccyan);">
                 <div class="button-text-light" style="top:5px; color:white">
-                    Yes</div>
+                    Home</div>
             </div>
+          <a>
+            <!--
             <div class="svg-wrapper-light choice-button" style="border: solid 5px var(--cpurple);">
                 <div class="button-text-light" style="top:5px; color:white">
                     Back</div>
             </div>
+          -->
         </div>
+
 </body>
 
 </html>
