--- a/ui/introduction.html
+++ b/ui/introduction.html
@@ -9,9 +9,9 @@
 <body>
 
     <div class="videoBgWrapper">
-        <video autoplay muted loop id="myVideo">
+        <video autoplay id="myVideo">
             <source src="../img/video/introduction.webm" width="100%" type="video/webm" class="videoBg">
-            Your browser does not support HTML5 video.
+            Your browser does not support HTML5 video :( try using Chrome!
         </video>
     </div>
 
