--- a/ui/choice.html
+++ b/ui/choice.html
@@ -27,7 +27,7 @@
 
 				<h1 class="center" style="top:40%">Would you like me to preserve your memory?</h1>
 				<div class="button-container" style="padding:400px 0 0 0">
-					<a href="animation.html">
+					<a href="choice_childhood.html">
 						<div class="svg-wrapper-light choice-button-wide" style="border: solid 5px var(--cpurple);">
 							<div class="button-text-light" style="top:5px; color:white">
 								YES</div>
