--- a/ui/view_memory[for_testing].html
+++ b/ui/view_memory[for_testing].html
@@ -68,9 +68,9 @@
 
 <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js'></script>
 <script>
-	// setInputText("DMSP Preseration sdglakjdsrgnakrSrhzdrjzdtjz");
-	// play();
-	// setRandomColoursByCategory("childhood");
+	setInputText("DMSP Preseration sdglakjdsrgnakrSrhzdrjzdtjz");
+	play();
+	setRandomColoursByCategory("childhood");
 
 
 	"use strict";
