attempting dynamic delete page

--- a/ui/save.html
+++ b/ui/save.html
@@ -13,6 +13,28 @@
 <link rel="stylesheet" href="../css/style.css">
 <link rel="stylesheet" href="../css/choice.css">
 
+<?php
+session_start();
+
+$save_gif_string = "../img/gif/save-gif/";
+$save_gif_string.= $_SESSION["category"];
+$save_gif_string.= ".gif";
+
+$memoriesJson = file_get_contents('../../json/memories.json');
+$memoriesArray = json_decode($memoriesJson, true);
+
+// ADD FORM DATA TO ARRAY
+$newEntry = array(
+  "name" => $_SESSION["name"],
+  "category" => $_SESSION["category"],
+  "memory" => $_SESSION["memory"],
+);
+$memoriesArray[] = $newEntry;
+
+// WRITE TO JSON
+$encodedArray = json_encode($memoriesArray);
+file_put_contents('../../json/memories.json', $encodedArray);
+?>
 
 <body id="body3">
     <div class="nav">
@@ -25,17 +47,24 @@
             <img src="../img/heading/heading.png" class="center" style="width: 600px; padding-top:100px"
                 alt="Memory Booth" />
         </div>
+
         <img src="../img/bg/modal1.png" class="frame" style="width: 800px;" />
 
         <div class="gif-container center">
-          <img id = "delete-gif" src = '' style="width: 400px;" />
+            <img id = "save-gif" src = '<?php echo $save_gif_string ?>' style="width: 400px;" />
         </div>
 
         <div>
-            <h1 class="center" style="top:40%">Memory deleted.</h1>
+            <h1 class="center" style="top:40%">Save successful.</h1>
         </div>
 
         <div class="button-container">
+            <a id = "memory-link" href = "view_memory.php">
+              <div class="svg-wrapper-light cyan choice-button" style="border: solid 5px var(--ccyan);">
+                  <div class="button-text-light" style="top:5px; color:white">
+                      View Memory</div>
+              </div>
+            <a>
 
             <a id = "home-link" href = "memory_list.php">
               <div class="svg-wrapper-light choice-button" style="border: solid 5px var(--cpurple);">
@@ -48,24 +77,4 @@
 
 </body>
 
-<script>
-if(localStorage.getItem('type').localeCompare("childhood") == 0)
-{
-console.log('childhood');
-}
-
-if(localStorage.getItem('type').localeCompare("travel") == 0)
-{
-  console.log('travel');
-}
-if(localStorage.getItem('type').localeCompare("student-life") == 0)
-{
-  console.log('student');
-
-}
-if(localStorage.getItem('type').localeCompare("others") == 0)
-{
-  console.log('other');
-}
-</script>
 </html>
