--- a/ui/record_memory.html
+++ b/ui/record_memory.html
@@ -17,7 +17,7 @@
 
 <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.min.js'></script>
-
+<script src="http://libs.baidu.com/jquery/2.0.0/jquery.min.js"></script>
 
 <body id="body-general">
 	<div class="container center-form">
@@ -83,7 +83,6 @@
 	</div>
 
 	<script>
-
 		function checkForm()
 		{
 			document.getElementById("name_error").innerHTML = '';
@@ -115,7 +114,9 @@
 					document.getElementById("memory_error").innerHTML = "Please enter your memory!";
 					return false;
 			}
-		}
+
+			}
+
 
 	</script>
 </body>
