delete.html working

--- a/ui/choice.html
+++ b/ui/choice.html
@@ -34,7 +34,7 @@
 						</div>
 					</a>
 
-					<a href="delete.php">
+					<a href="delete.html">
 						<div class="svg-wrapper-light cyan choice-button-wide" style="border: solid 5px var(--ccyan);">
 							<div class="button-text-light" style="top:5px; color:white">
 								NO</div>
