--- a/ui/delete.html
+++ b/ui/delete.html
@@ -28,14 +28,24 @@
         <img src="../img/bg/modal1.png" class="frame" style="width: 800px;" />
 
         <div class="gif-container center">
-          <img id = "delete-gif" src = '' style="width: 400px;" />
+          <img id = "gif" src = '' style="width: 400px;" />
         </div>
 
         <div>
-            <h1 class="center" style="top:40%">Memory deleted.</h1>
+            <h1 id = "text" class="center" style="top:40%">Are you sure?</h1>
         </div>
 
         <div class="button-container">
+
+          <button id = "delete-button" onclick = "deleteMem()" class="svg-wrapper-light cyan choice-button" style="border: solid 5px var(--ccyan);">
+              <div class="button-text-light" style="top:0px; color:white">
+                  Delete</div>
+        </button>
+
+          <button id = "back-button" onclick = "window.location.href = 'choice.html'"class="svg-wrapper-light choice-button" style="border: solid 5px var(--cpurple);">
+              <div class="button-text-light" style="top:0px; color:white">
+                  Back</div>
+          </button>
 
             <a id = "home-link" href = "memory_list.php">
               <div class="svg-wrapper-light choice-button" style="border: solid 5px var(--cpurple);">
@@ -49,23 +59,34 @@
 </body>
 
 <script>
-if(localStorage.getItem('type').localeCompare("childhood") == 0)
+document.getElementById("home-link").style.display = "none";
+
+if(localStorage.getItem('type')== "childhood")
 {
-console.log('childhood');
+document.getElementById("gif").src = "../img/gif/delete-gif/childhood-delete.gif";
 }
 
-if(localStorage.getItem('type').localeCompare("travel") == 0)
+if(localStorage.getItem('type')== "travel")
 {
-  console.log('travel');
+  document.getElementById("gif").src = "../img/gif/delete-gif/travel-delete.gif";
 }
-if(localStorage.getItem('type').localeCompare("student-life") == 0)
+if(localStorage.getItem('type')== "student-life")
 {
-  console.log('student');
+  document.getElementById("gif").src = "../img/gif/delete-gif/student-life-delete.gif";
+}
+if(localStorage.getItem('type')== "others")
+{
+  document.getElementById("gif").src = "../img/gif/delete-gif/others-delete.gif";
+}
 
-}
-if(localStorage.getItem('type').localeCompare("others") == 0)
+function deleteMem()
 {
-  console.log('other');
+  document.getElementById("home-link").style.display = "block";
+  document.getElementById("delete-button").style.display = "none";
+  document.getElementById("back-button").style.display = "none";
+  document.getElementById("text").innerHTML = "Memory deleted."
+  document.getElementById("gif").style.display = "none";
 }
+
 </script>
 </html>
