--- a/ui/memory_list.html
+++ b/ui/memory_list.html
@@ -10,21 +10,76 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-<link rel="stylesheet" href="../css/memoryList.css">
 <link href="https://fonts.googleapis.com/css2?family=Orbitron" rel="stylesheet">
 <link rel="stylesheet"
     href="https://blogfonts.com/css/aWQ9NDg4ODAmc3ViPTg4MCZjPWImdHRmPUJyeW5kYTEyMzErU2Fucy50dGYmbj1icnluZGExMjMxLXNhbnM/Brynda1231 Sans.ttf" />
 <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css'>
 
+<!--Full page menu-->
+<link rel="stylesheet" href="../css/memoryList.css">
+<link rel="stylesheet" href="../css/hamburger.css">
+
 <body class="memory-list">
 
-    <div class="gradient-bg">
+    <!--Full page menu begin-->
+    <div class="burger">
+        <span></span>
+        <span></span>
+        <span></span>
     </div>
+    <div class="full-menu">
+        <ul>
+            <li>
+                <a href="index.html">
+                    <img class="center" src="../img/heading/heading.png" style="width: 120%;" />
+                </a>
+            </li>
+            <li>
+                <a href="memory_list.php">
+                    <div class="svg-wrapper-light" style="width:350px; margin: 120px 0 50px 0;">
+                        <svg style=" height:60px; width: 350px;" xmlns="http://www.w3.org/2000/svg">
+                            <rect class="shape-light" style="height:60px; width:350px;stroke-dasharray: 380 20 390 20;"
+                                stroke="#ffffff90" />
+                        </svg>
+                        <div class="button-text-light">Memory Archive</div>
+                    </div>
+                </a>
+            </li>
+            <li><a href="read_me.html">
+                    <div class="svg-wrapper-light" style="width:350px; margin: 50px 0;">
+                        <svg style=" height:60px; width: 350px;" xmlns="http://www.w3.org/2000/svg">
+                            <rect class="shape-light" style="height:60px; width:350px;stroke-dasharray: 380 20 390 20;"
+                                stroke="#ffffff90" />
+                        </svg>
+                        <div class="button-text-light">Read Me</div>
+                    </div>
+                </a>
+            </li>
+            <li><a href="read_me.html">
+                    <div class="svg-wrapper-light" style="width:350px; margin: 50px 0;">
+                        <svg style=" height:60px; width: 350px;" xmlns="http://www.w3.org/2000/svg">
+                            <rect class="shape-light" style="height:60px; width:350px;stroke-dasharray: 380 20 390 20;"
+                                stroke="#ffffff90" />
+                        </svg>
+                        <div class="button-text-light">About my creator</div>
+                    </div>
+                </a>
+            </li>
+            <li><a href="introduction.html">
+                    <div class="svg-wrapper-light cyan" style="width:350px; margin: 50px 0;">
+                        <svg style=" height:60px; width: 350px;" xmlns="http://www.w3.org/2000/svg">
+                            <rect class="shape-light" style="height:60px; width:350px;stroke-dasharray: 380 20 390 20;"
+                                stroke="#ffffff90" />
+                        </svg>
+                        <div class="button-text-light">Add my memories</div>
+                    </div>
+                </a>
+            </li>
+        </ul>
+    </div>
+    <!--Full page menu end-->
 
-    <div class="hamburger">
-        <button class="button-hamburger" type="button"><a href="menu.html"> <img src="../img/button/narv.png"
-                    style="width: 50px; background-color: transparent; " alt="" /></a>
-        </button>
+    <div class="gradient-bg">
     </div>
 
     <div class="container" id="tablist-section">
@@ -33,7 +88,7 @@
 
                 <a class="nav-item nav-link active" id="nav-childhood-tab" data-toggle="tab" href="#nav-childhood"
                     role="tab" aria-controls="nav-childhood" aria-selected="true">
-                    <div class="svg-wrapper-light pink" style="width:200px;">
+                    <div class="svg-wrapper-light pink" style="width:200px;margin-left:40px">
                         <svg style=" height:60px; width: 200px;" xmlns="http://www.w3.org/2000/svg">
                             <rect class="shape-light pink" style="height:60px; width:200px;" stroke="#ffffff90" />
                         </svg>
@@ -43,7 +98,7 @@
 
                 <a class="nav-item nav-link" id="nav-travel-tab" data-toggle="tab" href="#nav-travel" role="tab"
                     aria-controls="nav-travel" aria-selected="false">
-                    <div class="svg-wrapper-light yellow" style="width:200px; margin-right: 40px;">
+                    <div class="svg-wrapper-light yellow" style="width:200px;">
                         <svg style=" height:60px; width: 200px;" xmlns="http://www.w3.org/2000/svg">
                             <rect class="shape-light yellow" style="height:60px; width:200px;" stroke="#ffffff90" />
                         </svg>
@@ -60,7 +115,7 @@
                         <div class="button-text-light">Student Life</div>
                     </div>
                 </a>
-                
+
                 <a class="nav-item nav-link" id="nav-others-tab" data-toggle="tab" href="#nav-others" role="tab"
                     aria-controls="nav-others" aria-selected="false">
                     <div class="svg-wrapper-light cyan" style="width:200px;">
@@ -207,7 +262,19 @@
 
     <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js'></script>
     <script src='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.min.js'></script>
-    <script src='https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.15.0/popper.min.js'></script>
+    <script src="https://unpkg.com/@popperjs/core@2/dist/umd/popper.js"></script>
+
+
+    <!--Full page menu-->
+    <script>
+        const ico = document.querySelector('.burger');
+        const fullMenu = document.querySelector('.full-menu');
+
+        ico.addEventListener('click', function () {
+            this.classList.toggle('is-active');
+            fullMenu.classList.toggle('is-active');
+        })
+    </script>
 
 </body>
 
